--- a/styles/style.css
+++ b/styles/style.css
@@ -492,3 +492,52 @@ nav .nav-menu {
   text-underline-position: from-font;
 }
 /* future target starts */
+.future-target {
+}
+.future-target .future {
+}
+.future .next-target {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.next-target .next {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  border-radius: 10px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  background: #fff;
+  padding: 32px;
+}
+.next .next-image-1 {
+  width: 75px;
+  height: 76px;
+}
+.next-image-1 img {
+  width: 100%;
+  height: 100%; /* object-fit: cover; */
+}
+.next .next-image-2 {
+  width: 115px;
+  height: 71px;
+}
+.next-image-2 img {
+  width: 100%;
+  height: 100%;
+}
+.next .next-image-3 {
+  width: 87px;
+  height: 87px;
+}
+.next-image-3 img {
+  width: 100%;
+  height: 100%;
+}
+.next .next-content {
+  flex-direction: column;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
