--- a/styles/style.css
+++ b/styles/style.css
@@ -541,3 +541,106 @@ nav .nav-menu {
   justify-content: space-between;
   gap: 10px;
 }
+/* support section starts */
+.support-section {
+}
+.support-section .support {
+  border-radius: 16px;
+  background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.2) 0%,
+      rgba(0, 0, 0, 0.2) 100%
+    ),
+    linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+    linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+    url("../images/handshake.jpg") lightgray 50% / cover no-repeat;
+  display: flex;
+  padding: 51px 38px;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+}
+.support .support-content {
+}
+.support-content .support-heading {
+  color: #fff;
+  text-align: center;
+  font-family: "Azeret Mono";
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px; /* 112.5% */
+}
+.support-content .support-description {
+  color: #fff;
+  text-align: center;
+  font-family: "Azeret Mono";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 162.5% */
+  max-width: 485px;
+}
+.support .form-container {
+  margin: 0 auto;
+  width: 534px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.form-container input[type="text"] {
+  flex-grow: 1;
+  border-radius: 3px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  background: #fff;
+  padding: 13px 15px;
+  color: rgba(13, 19, 33, 0.4);
+  font-family: "Azeret Mono";
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.form-container button {
+  border-radius: 3px;
+  background: #fff;
+  padding: 13px 17px;
+  color: #0d1321;
+  text-align: center;
+  font-family: "Azeret Mono";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.footer-section {
+  margin-top: 100px;
+  border-radius: 10px;
+  background: rgba(13, 19, 33, 0.03);
+}
+.footer-section .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px 0px;
+}
+.footer .footer-content {
+}
+.footer-content .footer-description {
+  color: #0d1321;
+  font-family: "Azeret Mono";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.footer .footer-icon {
+  display: flex;
+  gap: 13px;
+}
+.footer-icon a {
+}
+.footer-icon a img {
+  width: 30px;
+  height: 30px;
+}
